vlib/v/checker/tests/enum_error_module.out
vlib/v/checker/tests/enum_error_module.vv:5:13: error: unknown enum `missing_enum.ColoList` (type_idx=0)
    3 | fn main() {
    4 |     mut c := me.Color{
    5 |         color: me.ColoList.black
      |                   ~~~~~~~~~~~~~~
    6 |     }
    7 |     println(c)