vlib/v/checker/tests/enum_error_module.vv
import missing_enum as me

fn main() {
	mut c := me.Color{
		color: me.ColoList.black
	}
	println(c)
}
